# cmake-cpp-template

./: .gitignore  CMakeLists.txt  README.md  rpi-zero-2w-toolchain.cmake  rpi5-toolchain.cmake  x86_64-linux-toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
test/: CMakeLists.txt  sample.cpp
tests/: CMakeLists.txt
